--- a/assets/style.css
+++ b/assets/style.css
@@ -693,8 +693,13 @@ body {
 .mobile-offer {
   display: none;
   align-items: center;
-  padding: 3px 0;
-  margin-left: 50px;
+  padding: 5px 0 3px 50px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #fff;
+  left: 0;
+  border-top: 1px solid #ECECEC;
 }
 @media (max-width: 767px) {
   .mobile-offer {
