--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -571,11 +571,23 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-top: 12px;
+      margin-top: 19px;
 
       @include response-to(small) {
         display: block;
-        margin-top: 24px;
+        margin-top: 30px;
+      }
+
+      &-mob-text {
+        margin-bottom: 22px;
+        text-align: center;
+        font-size: 14px;
+        line-height: 20px;
+        display: none;
+
+        @include response-to(small) {
+          display: block;
+        }
       }
     }
 
@@ -696,24 +708,13 @@
     }
   }
 
-  &__coast {
-    margin-bottom: 8px;
-    display: flex;
-    align-items: center;
-  }
+  &__info {
 
-  &__sale {
-    font-size: 14px;
-    line-height: 16px;
-    text-decoration-line: line-through;
-    color: #999;
-    margin-right: 8px;
-  }
-
-  &__value {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 24px;
+    &_text {
+      font-size: 14px;
+      line-height: 20px;
+      margin-bottom: 9px;
+    }
   }
 
   &__btn {
