--- a/assets/style.css
+++ b/assets/style.css
@@ -595,12 +595,24 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 12px;
+  margin-top: 19px;
 }
 @media (max-width: 767px) {
   .product__info_footer {
     display: block;
-    margin-top: 24px;
+    margin-top: 30px;
+  }
+}
+.product__info_footer-mob-text {
+  margin-bottom: 22px;
+  text-align: center;
+  font-size: 14px;
+  line-height: 20px;
+  display: none;
+}
+@media (max-width: 767px) {
+  .product__info_footer-mob-text {
+    display: block;
   }
 }
 .product__info_coast {
@@ -722,22 +734,10 @@ body {
   width: 100%;
   height: auto;
 }
-.mobile-offer__coast {
-  margin-bottom: 8px;
-  display: flex;
-  align-items: center;
-}
-.mobile-offer__sale {
+.mobile-offer__info_text {
   font-size: 14px;
-  line-height: 16px;
-  text-decoration-line: line-through;
-  color: #999;
-  margin-right: 8px;
-}
-.mobile-offer__value {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 24px;
+  line-height: 20px;
+  margin-bottom: 9px;
 }
 .mobile-offer__btn {
   display: block;
