--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -361,7 +361,7 @@
 
     &:before {
       content: 'Wellness Daily';
-      background: #80AB53;
+      background: #8ECE4B;
       position: absolute;
       border-radius: 4px 4px 0 0;
       color: #fff;
@@ -439,7 +439,7 @@
   &__content {
     display: flex;
     align-items: flex-start;
-    margin-bottom: 117px;
+    margin-bottom: 84px;
 
     @include response-to(small) {
       margin-bottom: 65px;
@@ -656,12 +656,58 @@
   }
 }
 
+.certificate {
+  margin-bottom: 51px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
+
+  &__img {
+    display: block;
+    flex: 0 0 354px;
+    margin-right: 79px;
+
+    @include response-to(large) {
+      margin-right: 24px;
+    }
+
+    @include response-to(small) {
+      flex: 0 0 240px;
+      margin: 0 auto;
+    }
+
+    img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+    }
+  }
+
+  &__info {
+
+    @include response-to(small) {
+      display: none;
+    }
+  }
+
+  &__text {
+    padding-top: 16px;
+    font-size: 16px;
+    line-height: 20px;
+
+    &:not(:last-of-type) {
+      margin-bottom: 16px;
+    }
+  }
+}
+
 .footer {
   background-color: #ECECEC;
   padding: 94px 0 84px;
 
   @include response-to(small) {
-    padding: 44px 0;
+    padding: 44px 0 130px;
   }
 
   &__text {
